[gd_scene load_steps=6 format=2]

[ext_resource path="res://layouts/Btn.tscn" type="PackedScene" id=1]
[ext_resource path="res://layouts/bg.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/Lobby/Lobby.gd" type="Script" id=3]
[ext_resource path="res://layouts/ExitBtn/ExitBtn.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/styles/main_theme.tres" type="Theme" id=5]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" parent="." instance=ExtResource( 2 )]

[node name="Content" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Content"]
margin_left = 387.0
margin_top = 183.0
margin_right = 637.0
margin_bottom = 417.0
custom_constants/separation = 20

[node name="BtnCreate" parent="Content/Menu" instance=ExtResource( 1 )]
margin_right = 250.0
text = "CREATE"

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Menu"]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 164.0
custom_constants/separation = 5

[node name="IPaddress" type="LineEdit" parent="Content/Menu/VBoxContainer"]
margin_right = 250.0
margin_bottom = 39.0
align = 3
max_length = 45
placeholder_text = "IP_ADDRESS"
caret_blink = true

[node name="BtnJoin" parent="Content/Menu/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 44.0
margin_right = 250.0
margin_bottom = 94.0
disabled = true
text = "JOIN"

[node name="BtnBack" parent="Content/Menu" instance=ExtResource( 1 )]
margin_top = 184.0
margin_right = 250.0
margin_bottom = 234.0
text = "BACK"

[node name="Onboarding" type="VBoxContainer" parent="Content"]
visible = false
margin_left = 312.0
margin_top = 250.0
margin_right = 712.0
margin_bottom = 349.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Content/Onboarding"]
margin_right = 400.0
margin_bottom = 29.0
rect_min_size = Vector2( 400, 0 )
text = "WAIT_PLAYER"
align = 1
autowrap = true

[node name="BtnCancel" parent="Content/Onboarding" instance=ExtResource( 1 )]
margin_left = 75.0
margin_top = 49.0
margin_right = 325.0
margin_bottom = 99.0
size_flags_horizontal = 4
text = "BTN_CANCEL"

[node name="ExitBtn" parent="." instance=ExtResource( 4 )]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -44.0
margin_right = 55.0
margin_bottom = 44.0
window_title = ""
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Content/Menu/BtnCreate" to="." method="_on_BtnCreate_pressed"]
[connection signal="text_changed" from="Content/Menu/VBoxContainer/IPaddress" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Content/Menu/VBoxContainer/BtnJoin" to="." method="_on_BtnJoin_pressed"]
[connection signal="pressed" from="Content/Menu/BtnBack" to="." method="_on_BtnBack_pressed"]
[connection signal="pressed" from="Content/Onboarding/BtnCancel" to="." method="_on_BtnCancel_pressed"]
